# Equivariant-Polynomial-Tensor-Functions

./: .gitignore  AGENTS.md  BooleanTools.wl  Cache.nb  ClebschGordanTools.wl  CombinatoricsTools.wl  Draft 10_1_2025.nb  Equivariant Polynomial Tensor Functions Draft.nb  Equivariant Polynomial Tensor Functions.nb  EquivariantPolynomialTensorFunctions.wl  GrowMultiplicitySpaceTree.wl  HarvestMultiplicitySpaceTree.wl  IsotypicDecompositionTools.wl  LICENSE  Profile.nb  README.md  TensorTools.wl  Testing.nb  TreeTools.wl  UnitTestTools.wl  pyproject.toml  pyrightconfig.json
Mathematica/: BooleanTools.wl  Cache.nb  ClebschGordanTools.wl  CombinatoricsTools.wl  Equivariant Polynomial Tensor Functions.nb  GrowMultiplicitySpaceTree.wl  TensorTools.wl  Testing.nb  TreeTools.wl
Python/equivariant_polynomials/: README.md
Python/equivariant_polynomials/benchmarks/: __init__.py  benchmark.py  reporting.py
Python/equivariant_polynomials/docs/: theory.aux  theory.fdb_latexmk  theory.fls  theory.out  theory.tex  usage.md
Python/equivariant_polynomials/notebooks/: benchmarking.ipynb  examples.ipynb
benchmarks/: __init__.py  benchmark.py
docs/: examples.ipynb  installation.md  theory.tex  usage.md
mathematica/: UnitTestTools.wl
notebooks/: benchmarking.ipynb  so2_kepler_hnn_comparison.ipynb
src/equivariant_polynomials/: __init__.py  api.py
tests/: conftest.py  test_api.py  test_benchmark.py  test_combinatorics.py  test_generators.py  test_isotypic.py  test_known_generator_counts.py  test_so2.py  test_so3.py  test_streaming.py  test_types.py
(+36 files in other folders)
